--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                 </a>
 
                 <!-- ZvZ -->
-                <a href="zvz.html" class="category-card zvz-card">
+                <a href="Zvz.html" class="category-card zvz-card">
                     <div class="category-top">
                         <div class="category-icon">👥</div>
                         <h2 class="category-title">ZvZ</h2>
