--- a/index.html
+++ b/index.html
@@ -431,3 +431,8 @@
     </script>
 </body>
 </html>
+<a href="add-build.html" style="display: block; text-align: center; margin: 40px;">
+    <button style="padding: 15px 30px; background: #2563eb; color: white; border: none; border-radius: 10px; font-size: 1.1rem;">
+        ➕ Добавить свой билд
+    </button>
+</a>
