--- a/add-build.html
+++ b/add-build.html
@@ -431,6 +431,9 @@
     </script>
 </body>
 </html>
+<script>
+// Это закроет предыдущий скриптовый блок, если он был незакрыт
+</script>
 // В самом начале файла, перед другими функциями, добавляем код проверки
 const ACCESS_CODE = "92421lis932"; // Секретный код
 
