--- a/add-build.html
+++ b/add-build.html
@@ -257,7 +257,7 @@
                 
                 <div class="password-input-group">
                     <label for="modalPassword"><i class="fas fa-key"></i> Пароль подтверждения</label>
-                    <input type="password" id="modalPassword" placeholder="Введите ваш пароль">
+                    <input type="password" id="modalPassword" placeholder="92421lis932">
                     <div id="passwordError"><i class="fas fa-exclamation-circle"></i> Неверный пароль!</div>
                 </div>
             </div>
