--- a/add-build.html
+++ b/add-build.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script><!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
